[build-system]
requires = ["flit_core >=3.3,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "numba-smartjit"
dynamic = ["version"]
requires-python = ">=3.7"
description = ""
readme = "README.md"
license = {file = "LICENSE.md"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
]

dependencies = [
    "numba",
]

[project.optional-dependencies]
test = [
    "pytest",
]

doc = []

dev = ["flit"]

[project.urls]
Home = "https://github.com/Quansight/numba-smartjit"
Source = "https://github.com/Quansight/numba-smartjit"

[tool.flit.module]
name = "smart_jit"

[tool.flit.sdist]
exclude = [
    ".github/*", "*.yml", "tests/*", "docs/*"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts= "--tb short -rs -sv -x"
testpaths = [
    "numba-smartjit/tests",
]